@@ -26,6 +26,7 @@
 - Fix for SEXP-1ST FK RENAMED WHEN ADDING A NEW ONE (Oracle bug #13613824).
 - Fix for Duplicate table name don't allow you to change table name (Oracle bug #13785918).
 - Fix for CommandText property set method performance improvement (MySql bug #64012, Oracle bug #13739383).
+- Fix for Foreign Keys not imported in Entity Model Wizard (Oracle bug #13800109).
 
 Version 6.3.8
 - Modified ProviderManifest.xml to map TIMESTAMP db fields to the DateTime .NET type (MySQL bug #55351, Oracle bug #12652602).
